fixes #319 (menu icon visible now when hovered over it)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,12 +64,16 @@ h3.custom-navtitle {
   align-items: center;
 }
 
+.custom-menubutton i{
+  color: white;
+}
+
 .custom-menubutton:hover {
   background-color:#F0EEEE;
 }
 
-.custom-menubutton i{
-  color: white;
+.custom-menubutton:hover i{
+  color:black;
 }
 
 .custom-menu-cont {
